FINERACT-2455: Add WC near breach evaluation